-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.0-beta1
-
None
-
726f2730e (master)
When an animated image (e.g. gif or webp) is opened in the ImageViewer, a play icon appears. When the play button gets pressed, the animation stars and the button turns into a pause button. When the the pause gets pressed the playback resumes and the button turns back into a play button.
When the animation ends, the user can keep clicking on that button and apart from the icon toggling between play and pause, nothing happens, the animation remains at its last frame. The animation is not replay-able (issue #1).
A looped animation plays only once and does not repeat. If Qt supports detecting looping of an animation, the animation should loop (issue #2).
| For Gerrit Dashboard: QTCREATORBUG-29606 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 503824,2 | ImageViewer: Fix animation playback replay and loop | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |